Use new java 17 features