@@ -183,8 +183,8 @@ public class ConfigMigratorService implements MigrationService {
             Property<String> oldMySQLSkinTable = newProperty("MySQL.SkinTable", "Skins");
             if (oldMySQLSkinTable.isValidInResource(reader)) {
                 try {
-                    Files.write(plugin.getDataFolder().resolve("legacy_skin_table.txt"),
-                            oldMySQLSkinTable.determineValue(reader).getValue().getBytes(StandardCharsets.UTF_8));
+                    Files.writeString(plugin.getDataFolder().resolve("legacy_skin_table.txt"),
+                            oldMySQLSkinTable.determineValue(reader).getValue());
                 } catch (IOException e) {
                     logger.severe("Failed to write legacy_skin_table.txt", e);
                 }
@@ -193,8 +193,8 @@ public class ConfigMigratorService implements MigrationService {
             Property<String> oldMySQLPlayerTable = newProperty("MySQL.PlayerTable", "Players");
             if (oldMySQLPlayerTable.isValidInResource(reader)) {
                 try {
-                    Files.write(plugin.getDataFolder().resolve("legacy_player_table.txt"),
-                            oldMySQLPlayerTable.determineValue(reader).getValue().getBytes(StandardCharsets.UTF_8));
+                    Files.writeString(plugin.getDataFolder().resolve("legacy_player_table.txt"),
+                            oldMySQLPlayerTable.determineValue(reader).getValue());
                 } catch (IOException e) {
                     logger.severe("Failed to write legacy_player_table.txt", e);
                 }
